# zim-to-obsidian

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: README.md
examples/sample_notebook/: Demo.txt  Home.txt
examples/sample_notebook/Demo/: Subpage.txt  attachment.txt
examples/sample_notebook/Home/: extra.txt
examples/sample_notebook/Projects/: Alpha.txt
examples/sample_notebook/Projects/Alpha/: AlphaPage.txt
scripts/: zim2obsidian.py
src/zim_to_obsidian/: __init__.py  cli.py  converter.py
tests/: test_converter.py
