[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zim-to-obsidian"
version = "0.1.0"
description = "Convert Zim notebook sources to Obsidian Markdown"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "André Plöger" }]
keywords = ["zim", "obsidian", "markdown", "migration", "notes"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
zim2obsidian = "zim_to_obsidian.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
